--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -6,6 +6,9 @@
 				submitted by {{author}}
 				{{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}
 			</p>
+			<div class="date">
+				{{submitted}}
+			</div>
 		</div>
 		<a href="{{pathFor 'postPage'}}" class="discuss btn btn-default">Discuss</a>
 	</div>
