--- a/client/templates/comments/comment_item.html
+++ b/client/templates/comments/comment_item.html
@@ -2,7 +2,7 @@
 	<li>
 		<h4>
 			<span class="author">{{author}}</span>
-			<span class="date"> {{date}}</span>
+			<span class="date">On {{submittedText}}</span>
 		</h4>
 		<p>{{body}}</p>
 	</li>	
