--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -7,9 +7,9 @@
 				<a href="{{pathFor 'postPage'}}">{{commentsCount}} Comments</a>
 				{{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}
 			</p>
-			<div class="date">
+<!-- 			<div class="date">
 				{{submitted}}
-			</div>
+			</div> -->
 		</div>
 		<a href="{{pathFor 'postPage'}}" class="discuss btn btn-default">Discuss</a>
 	</div>
