only sync notifications that are relavent to the current user

--- a/client/templates/notifications/notifications.html
+++ b/client/templates/notifications/notifications.html
@@ -11,7 +11,7 @@
 			{{#each notifications}}
 				{{> notificationItem}}
 			{{/each}}
-		{{#else}}
+		{{else}}
 			<li><span>No Notifications</span></li>
 		{{/if}}
 	</ul>
