just pushing something for the green square

--- a/client/templates/comments/comment_submit.html
+++ b/client/templates/comments/comment_submit.html
@@ -1,6 +1,6 @@
 <template name="commentSubmit">
 	<form name="comment" class="coment-form form">
-		<div class="corm-group {{errorClass 'body'}}">
+		<div class="form-group {{errorClass 'body'}}">
 			<div class="controls">
 				<label for="body">Comment on this post</label>
 				<textarea name="body" id="body" class="form-control" rows="3"></textarea>
